crates/peregrine-tui/src/app/agent_ui/snapshots/peregrine_tui__agent__app__tests__agent_picker_item_name.snap
---
source: crates/peregrine-tui/src/app/agent_ui/app/tests.rs
assertion_line: 3020
expression: snapshot
---
Main [default] | 00000000-0000-0000-0000-000000000123
Robie [explorer] | 00000000-0000-0000-0000-000000000123
Robie | 00000000-0000-0000-0000-000000000123
[explorer] | 00000000-0000-0000-0000-000000000123
Agent | 00000000-0000-0000-0000-000000000123
