crates/peregrine-tui/src/app/agent_ui/snapshots/peregrine_tui__agent__app__tests__bypass_hook_trust_startup_warning.snap
---
source: crates/peregrine-tui/src/app/agent_ui/app/tests.rs
assertion_line: 189
expression: rendered
---
⚠ `--dangerously-bypass-hook-trust` is enabled. Enabled hooks may run without
  review for this invocation.
