crates/peregrine-tui/src/app/agent_ui/snapshots/peregrine_tui__agent__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap
---
source: crates/peregrine-tui/src/app/agent_ui/app/tests.rs
assertion_line: 3729
expression: rendered
---
>_ Peregrine (v<VERSION>)

model:     gpt-test high   /provider to change provider
directory: /tmp/project
