crates/peregrine-tui/src/app/agent_ui/snapshots/peregrine_tui__agent__app__tests__clear_ui_header_fast_status_fast_capable_models.snap
---
source: crates/peregrine-tui/src/app/agent_ui/app/tests.rs
assertion_line: 3764
expression: rendered
---
>_ Peregrine (v<VERSION>)

model:     gpt-5.4 xhigh   fast   /provider to change provider
directory: /tmp/project
